<resources>
    <string name="app_name">Run-the-World</string>
    <string name="social">Social</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="done">Done</string>
    <string name="to">to</string>
    <string name="miles">miles</string>
    <string name="min">min</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="from_to_description">From to image</string>
    <string name="distance_to_run">Distance</string>
    <string name="distance_unit">miles</string>
    <string name="in">in</string>
    <string name="time_needed">Time</string>
    <string name="time_unit">days</string>
    <string name="done_activity_button">Done</string>
    <string name="stop_activity_button">Stop</string>
    <string name="time_been_running">00:00:00</string>
    <string name="distance_been_running">0.0 miles</string>
    <string name="finish_button">finish</string>
    <string name="track_run">Track Run</string>
</resources>
